# mcp-server-demo

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/mcp_server/: server.py
