[project]
name = "mcp_server"
version = "0.1.0"
description = "MCP Server with HTTP/SSE support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.3",
    "fastmcp>=0.13.0",
    "httpx>=0.27.0",
    "uvloop>=0.20.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
serve = "python src/mcp_server/server.py"

# Linting and formatting
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]